Atualizando definição adicionarContato na OpenApi
